--- a/inst/markdown/04.snowcrab_fishery_model_turing.md
+++ b/inst/markdown/04.snowcrab_fishery_model_turing.md
@@ -68,18 +68,19 @@ Here we read in these results and prepare (format) them for timeseries analysis.
   # save to : carstm_directory = file.path(modeldir, carstm_model_label)
 
   fishery_model_data_inputs( 
-    year.assessment=year.assessment,  
+    year.assessment=year.assessment,   
     type="biomass_dynamics", 
-    for_julia=TRUE, 
+    snowcrab_filter_class="fb",
     modeldir=modeldir, 
-    carstm_model_label = carstm_model_label,
-    fishery_model_label=fishery_model_label  
+    carstm_model_label=carstm_model_label,
+    for_julia=TRUE,
+    fishery_model_label="turing1"  
   ) 
 
   # the name/location of the above creates a data file (which will be passed to Julia, later) 
   fndat  = file.path( modeldir, carstm_model_label, "biodyn_biomass.RData" )  # 
 
-  # for development, save at alternate locations
+  # for development using dynamical_model/snowcrab, save/copy at alternate locations
   # modeldir = file.path( homedir, "projects", "dynamical_model", "snowcrab", "data" ) 
 
 ```
