--- a/inst/markdown/02.tables.md
+++ b/inst/markdown/02.tables.md
@@ -24,9 +24,9 @@ format:
 This is a Markdown document ... To create HTML or PDF, etc, run: 
 
 
-  make quarto FN=02.tables YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/reports # {via Quarto}
+  make quarto FN=02.tables YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments # {via Quarto}
 
-  make rmarkdown FN=02.tables YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/reports {via Rmarkdown}
+  make rmarkdown FN=02.tables YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments {via Rmarkdown}
 
   make pdf FN=02.tables  # {via pandoc}
 
