--- a/inst/markdown/04.snowcrab_fishery_model_turing.md
+++ b/inst/markdown/04.snowcrab_fishery_model_turing.md
@@ -27,9 +27,9 @@ format:
 This is a Markdown document ... To create HTML or PDF, etc, run: 
 
 
-  make quarto FN=04.snowcrab_fishery_model_turing YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/reports # {via Quarto}
+  make quarto FN=04.snowcrab_fishery_model_turing YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments # {via Quarto}
 
-  make rmarkdown FN=04.snowcrab_fishery_model_turing YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/reports {via Rmarkdown}
+  make rmarkdown FN=04.snowcrab_fishery_model_turing YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments {via Rmarkdown}
 
   make pdf FN=04.snowcrab_fishery_model_turing  # {via pandoc}
 
