remove Model2 dde from operational code

--- a/inst/markdown/03.biomass_index_carstm.md
+++ b/inst/markdown/03.biomass_index_carstm.md
@@ -258,25 +258,19 @@ Each variable is modelled with the same covariates.
         p=pN
         ylab = "Number"
         fn_root_prefix = "Predicted_numerical_abundance"
-        fn_root =  "Predicted_numerical_abundance_persistent_spatial_effect" 
-        outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
-        title= paste( snowcrab_filter_class, "Number; no./m^2"  )
+        # title= paste( snowcrab_filter_class, "Number; no./m^2"  )
       }
       if ( vns=="meansize") {
         p=pW
         ylab = "Mean weight"
         fn_root_prefix = "Predicted_meansize"
-        fn_root =  "Predicted_meansize_persistent_spatial_effect" 
-        outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
-        title= paste( snowcrab_filter_class, "Mean weight; kg" ) 
+        # title= paste( snowcrab_filter_class, "Mean weight; kg" ) 
       }
       if ( vns=="habitat" ) {
         p=pH
         ylab = "Probability"
         fn_root_prefix = "Predicted_presence_absence"
-        fn_root =  "Predicted_presence_absence_persistent_spatial_effect" 
-        outfilename = file.path( outputdir, paste(fn_root, "png", sep=".") )
-        title= paste( snowcrab_filter_class, "Probability")  
+        # title= paste( snowcrab_filter_class, "Probability")  
       }
 
       outputdir = file.path( p$modeldir, p$carstm_model_label, "figures" )
