--- a/inst/markdown/02.tables.md
+++ b/inst/markdown/02.tables.md
@@ -24,9 +24,9 @@ format:
 This is a Markdown document ... To create HTML or PDF, etc, run: 
 
 
-  make quarto FN=02.tables YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments # {via Quarto}
+  make quarto FN=02.tables YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments DOCEXTENSION=html # {via Quarto}
 
-  make rmarkdown FN=02.tables YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments {via Rmarkdown}
+  make rmarkdown FN=02.tables YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments  DOCTYPE=pdf_document DOCEXTENSION=pdf {via Rmarkdown}
 
   make pdf FN=02.tables  # {via pandoc}
 
@@ -166,7 +166,8 @@ NENS:
 #| output: true
 #| label: table-fishery-nens-sublegal
 #| tbl-cap: "Fishery performance statistics in NENS. Distribution of at sea observations of males less than 95 mm CW by year and shell condition."
-resN = dcast( odb[ region=="cfanorth", .(N=.N), by=.(fishyr, shell) ], fishyr  ~ shell, value.var="N", fill=0, drop=FALSE, na.rm=TRUE )
+resN = dcast( odb0[ region=="cfanorth", .(N=.N), by=.(fishyr, shell) ], fishyr  ~ shell, value.var="N", fill=0, drop=FALSE, na.rm=TRUE )
+if ( "NA" %in% names(resN) ) resN$"NA" = NULL
 names(resN) = c("Year", "CC1", "CC2", "CC3", "CC4", "CC5" )
 resN$Total = rowSums( resN[, 2:6 ], na.rm=TRUE)
 resN[, 2:6 ] = round(resN[, 2:6 ] / resN$Total * 100, digits=2)
@@ -183,7 +184,8 @@ SENS:
 #| output: true
 #| label: table-fishery-sens-sublegal
 #| tbl-cap: "Fishery performance statistics in SENS. Distribution of at sea observations of males less than 95 mm CW by year and shell condition."
-resS = dcast( odb[ region=="cfasouth", .(N=.N), by=.(fishyr, shell) ], fishyr  ~ shell, value.var="N", fill=0, drop=FALSE, na.rm=TRUE )
+resS = dcast( odb0[ region=="cfasouth", .(N=.N), by=.(fishyr, shell) ], fishyr  ~ shell, value.var="N", fill=0, drop=FALSE, na.rm=TRUE )
+if ( "NA" %in%  names(resS)) resS$"NA" = NULL
 names(resS) = c("Year", "CC1", "CC2", "CC3", "CC4", "CC5" )
 resS$Total = rowSums( resS[, 2:6 ], na.rm=TRUE)
 resS[, 2:6 ] = round(resS[, 2:6 ] / resS$Total * 100, digits=2)
@@ -200,11 +202,12 @@ gt::gt(resS) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(
 #| output: true
 #| label: table-fishery-4x-sublegal
 #| tbl-cap: "Fishery performance statistics in 4X. Distribution of at sea observations of males less than 95 mm CW by year and shell condition."
-resX = dcast( odb[ region=="cfa4x", .(N=.N), by=.(fishyr, shell) ], fishyr  ~ shell, value.var="N", fill=0, drop=FALSE, na.rm=TRUE )
+resX = dcast( odb0[ region=="cfa4x", .(N=.N), by=.(fishyr, shell) ], fishyr  ~ shell, value.var="N", fill=0, drop=FALSE, na.rm=TRUE )
+if ("NA" %in% names(resX)) resX$"NA" = NULL
 names(resX) = c("Year", "CC1", "CC2", "CC3", "CC4", "CC5" )
 resX$Total = rowSums( resX[, 2:6 ], na.rm=TRUE)
 resX[, 2:6 ] = round(resX[, 2:6 ] / resX$Total * 100, digits=2)
-gt::gt(resS) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1), 
+gt::gt(resX) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1), 
     summary_row.padding = gt::px(1), grand_summary_row.padding = gt::px(1), 
     footnotes.padding = gt::px(1), source_notes.padding = gt::px(1), 
     row_group.padding = gt::px(1))
@@ -365,7 +368,7 @@ growth.11.to.12 =  predict.mass.g.from.CW.mm( mean(CW.interval.male(12)) ) - pre
 
 ### Compare discard rates Maritimes:
 
-NENS:
+NENS:discard
 
 ```{r}
 #| eval: true
@@ -373,7 +376,7 @@ NENS:
 #| warning: false
 #| error: false 
 #| label: table-fishery-nens-discard
-#| tbl-cap: "Fishery performance statistics in NENS. Discard rate by weight observed (and SD)."
+#| tbl-cap: "Fishery performance statistics in NENS. Average by-catch discard rate by weight observed (kg/trap haul; and standard deviation, SD)."
 region="cfanorth"
 o = observer.db( DS="bycatch_summary", p=p,  yrs=p$yrs, region=region )   
 resN = o$eff_summ[ order(fishyr), ]
@@ -394,7 +397,7 @@ SENS:
 #| warning: false
 #| error: false 
 #| label: table-fishery-sens-discard
-#| tbl-cap: "Fishery performance statistics in SENS. Discard rate by weight observed (and SD)."
+#| tbl-cap: "Fishery performance statistics in SENS. Average by-catch discard rate by weight observed (kg/trap haul; and standard deviation, SD)."
 region="cfasouth"
 o = observer.db( DS="bycatch_summary", p=p,  yrs=p$yrs, region=region )   
 resS = o$eff_summ[ order(fishyr), ]
@@ -415,7 +418,7 @@ gt::gt(resS) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(
 #| warning: false
 #| error: false 
 #| label: table-fishery-4x-discard
-#| tbl-cap: "Fishery performance statistics in 4X. Discard rate by weight observed (and SD)."
+#| tbl-cap: "Fishery performance statistics in 4X. Average by-catch discard rate by weight observed (kg/trap haul; and standard deviation, SD)."
 region="cfa4x"
 o = observer.db( DS="bycatch_summary", p=p,  yrs=p$yrs, region=region )   
 resX = o$eff_summ[ order(fishyr), ]
