--- a/inst/markdown/03.biomass_index_carstm.md
+++ b/inst/markdown/03.biomass_index_carstm.md
@@ -19,12 +19,12 @@ format:
 
    
 <!-- Preamble
- 
+
 This is a Markdown document ... To create HTML or PDF, etc, run: 
 
-  make quarto FN=03.biomass_index_carstm YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments # {via Quarto}
+  make quarto FN=03.biomass_index_carstm YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments DOCEXTENSION=html # {via Quarto}
 
-  make rmarkdown FN=03.biomass_index_carstm YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments {via Rmarkdown}
+  make rmarkdown FN=03.biomass_index_carstm YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments DOCTYPE=pdf_document DOCEXTENSION=pdf {via Rmarkdown}
 
   make pdf FN=03.biomass_index_carstm  # {via pandoc}
 
@@ -258,18 +258,21 @@ Each variable is modelled with the same covariates.
         p=pN
         ylab = "Number"
         fn_root_prefix = "Predicted_numerical_abundance"
+        fn_root = "number"
         # title= paste( snowcrab_filter_class, "Number; no./m^2"  )
       }
       if ( vns=="meansize") {
         p=pW
         ylab = "Mean weight"
         fn_root_prefix = "Predicted_meansize"
+        fn_root = "weight"
         # title= paste( snowcrab_filter_class, "Mean weight; kg" ) 
       }
       if ( vns=="habitat" ) {
         p=pH
         ylab = "Probability"
         fn_root_prefix = "Predicted_presence_absence"
+        fn_root = "habitat"
         # title= paste( snowcrab_filter_class, "Probability")  
       }
 
@@ -543,20 +546,20 @@ The fishery model used for stock assessment is the biomass dynamics model. It is
 ```r
 
   ## note the output directory .. this is used for the next script
- 
-  # saves in carstm_directory = file.path( pN$modeldir, pN$carstm_model_label )
+   # saves in carstm_directory = file.path( modeldir, carstm_model_label )
+  
+  run_is_operational = TRUE  
+  # run_is_operational = FALSE
+
   fishery_model_data_inputs( 
     year.assessment=year.assessment,   
     type="biomass_dynamics", 
     snowcrab_filter_class="fb",
-    modeldir=pN$modeldir, 
+    modeldir= ifelse( run_is_operational, pN$modeldir, file.path( homedir, "projects", "dynamical_model", "snowcrab", "data" ) ),
     carstm_model_label=carstm_model_label,
     for_julia=TRUE,
     fishery_model_label="turing1"  
   ) 
-
-  # for development, save at alternate locations
-  # modeldir = file.path( homedir, "projects", "dynamical_model", "snowcrab", "data" ) 
 
   
 ```
