--- a/inst/markdown/04.snowcrab_fishery_model_turing.md
+++ b/inst/markdown/04.snowcrab_fishery_model_turing.md
@@ -26,20 +26,21 @@ format:
 
 This is a Markdown document ... To create HTML or PDF, etc, run: 
 
+As it runs R and Julia, Quarto is probably the better tool to render. Alternatively, you can run everything directly and then render just the figures by turning off the R and Julia code chunks.
 
-  make quarto FN=04.snowcrab_fishery_model_turing YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments # {via Quarto}
+  make quarto FN=04.snowcrab_fishery_model_turing YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments DOCEXTENSION=html # {via Quarto}
 
-  make rmarkdown FN=04.snowcrab_fishery_model_turing YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments {via Rmarkdown}
+  # use Rmarkdown only if already run code chunks manually and all figures have been generated.
+  # make rmarkdown FN=04.snowcrab_fishery_model_turing YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments DOCTYPE=html_document DOCEXTENSION=html # {via Rmarkdown}
 
-  make pdf FN=04.snowcrab_fishery_model_turing  # {via pandoc}
+  # or a direct pdf construction through pandoc ... not tested yet
+  # make pdf FN=04.snowcrab_fishery_model_turing  # {via pandoc}
 
 
 Alter year and directories to reflect setup or copy Makefile and alter defaults to your needs.
   
  
 -->
-
- 
  
 
 ## Purpose
@@ -100,19 +101,18 @@ There are two ways you can use this.
 
     This method is most flexible and [documented here](https://github.com/jae0/dynamical_model/blob/master/snowcrab/04.snowcrab_fishery_model.md), where more options are also shown.  But it will require learning the language Julia and Turing library, but is very simple.
 
-```julia
+```{julia}
+#| eval: false 
+#| output: false
+
   year_assessment =2023
   yrs = 1999:year_assessment
 
   rootdir = homedir()
-
-  # choose location of source code
-  # project_directory = joinpath( rootdir, "bio", "bio.snowcrab", "inst", "julia" ) 
-  project_directory = joinpath( rootdir, "projects", "bio.snowcrab", "inst", "julia" ) 
  
-  bio_data_directory = joinpath( rootdir, "bio.data", "bio.snowcrab", "modelled", "default_fb", "fishery_model_results", "turing1"  )
-  
-  outputs_directory = joinpath( rootdir, "bio.data", "bio.snowcrab", "fishery_model" ) 
+  project_directory  = joinpath( rootdir, "projects", "bio.snowcrab", "inst", "julia" ) 
+  bio_data_directory = joinpath( rootdir, "bio.data", "bio.snowcrab", "modelled", "default_fb" )
+  outputs_directory  = joinpath( rootdir, "bio.data", "bio.snowcrab", "fishery_model" ) 
  
   model_variation = "logistic_discrete_historical"   
   model_outdir = joinpath( outputs_directory, string(year_assessment), model_variation )
@@ -135,7 +135,9 @@ There are two ways you can use this.
 
 ```
 
-**OR,**
+
+
+<!--  **OR,**
 
   2. Run within R and call Julia indirectly, using the JuliaCall R-library (install that too). 
 
@@ -232,11 +234,11 @@ As this and the other Julia files exist in a Git repository and we do not want t
 ```
  
 
-And that is it. Now we continue with report generation.
 
-For example, [using Rmarkdown reports](https://github.com/jae0/bio.snowcrab/inst/markdown/snowcrab_working_paper.rmd). 
+-->
 
-Here some of the outputs can be seen below:
+
+And that is it. Now we continue to look at the results: 
 
 
 
