--- a/inst/markdown/04.snowcrab_fishery_model_turing.md
+++ b/inst/markdown/04.snowcrab_fishery_model_turing.md
@@ -117,7 +117,7 @@ There are two ways you can use this.
   model_variation = "logistic_discrete_historical"   
   model_outdir = joinpath( outputs_directory, string(year_assessment), model_variation )
   
-  include( joinpath(project_directory, "snowcrab_startup.jl" ) )  # load libs
+  include( joinpath(project_directory, "startup.jl" ) )  # load libs
   include( joinpath(project_directory, "logistic_discrete_functions.jl" ) )  # load core modelling functions
  
   o = load( joinpath( bio_data_directory, "biodyn_biomass.RData" ), convert=true)   # load data; alter file path as required   
