begin move to quarto

--- a/inst/markdown/archive/03.biomass_index_carstm.md
+++ b/inst/markdown/archive/03.biomass_index_carstm.md
@@ -1,48 +1,20 @@
 ---
 title: "Snow crab Areal unit modelling"
-author:
-  - name: Snow crab group
-    # orcid: 0000-0003-3632-5723 
-    # email: jae.choi@dfo-mpo.gc.ca
-    # email: choi.jae.seok@gmail.com
-    # corresponding: true
-    affiliation: 
-      - name: Bedford Institute of Oceanography, Fisheries and Oceans Canada
-        city: Dartmouth
-        state: NS
-        url: www.bio.gc.ca
-date: 2024-08-17
-keywords: 
-  - snow crab fishery assessment
-  - areal-unit modelling of numerical abundance, habitat, mean weight
-  - convolution of posterior-simulations of biomass   
-abstract: |
-  Snow crab modelling of numerical abundance, mean weight and habitat using conditional autoregressive models. Biomass is estimated from these components via multiplication of the posterior draws.   
+author: "Jae S. Choi"
 toc: true
 number-sections: true
 highlight-style: pygments
-bibliography: media/references.bib  
-# csl: media/canadian-journal-of-fisheries-and-aquatic-sciences.csl  # see https://www.zotero.org/styles for more
-license: "CC BY"
-copyright: 
-  holder: Jae S. Choi
-  year: 2024
-citation: 
-  container-title: https://github.com/jae0/bio.snowcrab/
-  doi: NA
-funding: "The snow crab scientific survey was funded by the snow crab fishers of Maritimes Region of Atlantic Canada."
 editor:
   render-on-save: false
 format:
   html: 
     code-fold: true
     html-math-method: katex
-    embed-resources: true
+    self-contained: true
   pdf:
     pdf-engine: lualatex
   docx: default 
 ---
-
  
 
    
@@ -52,9 +24,9 @@ This is a Markdown document ... To create HTML or PDF, etc, run:
 
   make quarto FN=03.biomass_index_carstm YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments DOCEXTENSION=html # {via Quarto}
 
-  # make rmarkdown FN=03.biomass_index_carstm YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments DOCTYPE=pdf_document DOCEXTENSION=pdf {via Rmarkdown}
+  make rmarkdown FN=03.biomass_index_carstm YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments DOCTYPE=pdf_document DOCEXTENSION=pdf {via Rmarkdown}
 
-  # make pdf FN=03.biomass_index_carstm  # {via pandoc}
+  make pdf FN=03.biomass_index_carstm  # {via pandoc}
 
 Alter year and directories to reflect setup or copy Makefile and alter defaults to your needs.
   
@@ -76,12 +48,7 @@ The convolution of all three after posterior simulation is also known as a Hurdl
 
 ## Part 1 -- construct basic parameter list defining the main characteristics of the study
 
-
-```{r}
-#| label: setup
-#| eval: true
-#| output: false
-
+```r
   require(aegis)
   require(bio.snowcrab)   # loadfunctions("bio.snowcrab") 
 
@@ -164,32 +131,25 @@ The convolution of all three after posterior simulation is also known as a Hurdl
 
   pH$cyclic_name = as.character(pH$cyclic_levels)
   pH$cyclic_id = 1:pH$nw
-```
 
-Now that parameter are loaded, we can create (run manually) or reload the input data (later).
-
-```{r}
-#| label: input data
-#| eval: false
-#| output: false
 
   # create model data inputs and the output fields 
   M = snowcrab.db( p=pN, DS="carstm_inputs", sppoly=sppoly, redo=TRUE )  # will redo if not found
 
+  # for mapping below, some bathymetry and polygons
+  additional_features = snowcrab_mapping_features(pN)  
+  
 ```
   
 
 ## Part 2 -- spatiotemporal statistical model
 
-With all required parameters defined, the modelling is straightforward (run manually). Here we reused previous solution modes ("theta") to speed up solutions.
+With all required parameters defined, the modelling is straightforward. Here we reused previous solution modes ("theta") to speed up solutions.
 
 Each variable is modelled with the same covariates. 
 
-```{r}
-#| label: carstm-run
-#| eval: false
-#| output: false
 
+```r
     # total numbers
     sppoly = areal_units( p=pN )
     M = snowcrab.db( p=pN, DS="carstm_inputs", sppoly=sppoly  )  # will redo if not found
@@ -289,9 +249,6 @@ Each variable is modelled with the same covariates.
 
   # some maps and plots
 
-  # for mapping below, some bathymetry and polygons
-  additional_features = snowcrab_mapping_features(pN)  
-  
     for (vns in c( "number", "meansize", "habitat") ) {
       #vns ="number"
       #vns ="meansize"
