--- a/inst/markdown/archive/02.tables.md
+++ b/inst/markdown/archive/02.tables.md
@@ -1,35 +1,9 @@
 ---
 title: "Snow crab tables"
-author:
-  - name: Snow crab group
-    # orcid: 0000-0003-3632-5723 
-    # email: jae.choi@dfo-mpo.gc.ca
-    # email: choi.jae.seok@gmail.com
-    # corresponding: true
-    affiliation: 
-      - name: Bedford Institute of Oceanography, Fisheries and Oceans Canada
-        city: Dartmouth
-        state: NS
-        url: www.bio.gc.ca
-date: 2024-08-17
-keywords: 
-  - snow crab fishery assessment
-  - basic tables
-abstract: |
-  Snow crab demographic structure and basic fishery performance tables. 
+author: "Jae S. Choi"
 toc: true
 number-sections: true
 highlight-style: pygments
-bibliography: media/references.bib  
-# csl: media/canadian-journal-of-fisheries-and-aquatic-sciences.csl  # see https://www.zotero.org/styles for more
-license: "CC BY"
-copyright: 
-  holder: Jae S. Choi
-  year: 2024
-citation: 
-  container-title: https://github.com/jae0/bio.snowcrab/
-  doi: NA
-funding: "The snow crab scientific survey was funded by the snow crab fishers of Maritimes Region of Atlantic Canada."
 editor:
   render-on-save: false
 format:
@@ -40,11 +14,6 @@ format:
   pdf:
     pdf-engine: lualatex
   docx: default 
-  beamer:
-    pdf-engine: lualatex
-  powerpoint:
-  revealjs:
-
 ---
 
 
@@ -52,20 +21,17 @@ format:
 <!-- Preamble
  
  
-This is a Markdown/Quarto document ... To create HTML or PDF, etc, run: 
+This is a Markdown document ... To create HTML or PDF, etc, run: 
+
 
   make quarto FN=02.tables YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments DOCEXTENSION=html # {via Quarto}
 
-  # make rmarkdown FN=02.tables YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments  DOCTYPE=pdf_document DOCEXTENSION=pdf {via Rmarkdown}
+  make rmarkdown FN=02.tables YR=2023 SOURCE=~/projects/bio.snowcrab/inst/markdown WK=~/bio.data/bio.snowcrab/assessments  DOCTYPE=pdf_document DOCEXTENSION=pdf {via Rmarkdown}
 
-  # make pdf FN=02.tables  # {via pandoc}
+  make pdf FN=02.tables  # {via pandoc}
 
 Alter year and directories to reflect setup or copy Makefile and alter defaults to your needs.
-
-YAML options:
-jupyter: julia-1.10.4
-https://quarto.org/docs/output-formats/all-formats.html
-
+  
 -->
 
 
@@ -78,121 +44,7 @@ https://quarto.org/docs/output-formats/all-formats.html
     observer.db( DS="bycatch.redo", yrs=yrs )  
     observer.db( DS="odb.redo", p=p ) # 3 minutes
     observer.db( DS="bycatch_clean_data.redo", p=p, yrs=p$yrs ) # 3 minutes
-
-quarto options:
-
-
-The reserved prefixes are: fig, tbl, lst, tip, nte, wrn, imp, cau, thm, lem, cor, prp, cnj, def, exm, exr, sol, rem, eq, sec.
-avoid using underscores (_) in labels and IDs as this can cause problems when rendering to PDF with LaTeX.
-
-![Elephant](elephant.png){#fig-elephant}
-Default 	@fig-elephant 	Figure 1
-Capitalized 	@Fig-elephant 	Figure 1
-Custom Prefix 	[Fig @fig-elephant] 	Fig 1
-No Prefix 	[-@fig-elephant] 	1
-
-::: {#fig-elephants layout-ncol=2}
-![Surus](surus.png){#fig-surus}
-![Hanno](hanno.png){#fig-hanno}
-Famous Elephants
-:::
-
-See @fig-elephants for examples. In particular, @fig-hanno.
-
-or:
-
-#| label: fig-plots
-#| fig-cap: "Plots" 
-#| fig-subcap:
-#|   - "Plot 1"
-#|   - "Plot 2" 
-#| layout-ncol: 2
-
-| Col1 | Col2 | Col3 |
-|------|------|------|
-| A    | B    | C    |
-| E    | F    | G    |
-| A    | G    | G    |
-
-: My Caption {#tbl-letters}
-
-See @tbl-letters.
-
-or 
-::: {#tbl-letters}
-
-| Col1 | Col2 | Col3 |
-|------|------|------|
-| A    | B    | C    |
-| E    | F    | G    |
-| A    | G    | G    |
-
-My Caption
-
-::: 
-
-@fig-AAAA further explores the impact of temperature on ozone level.
-
-```{r}
-#| label: fig-AAAA
-#| fig-cap: "Temperature and ozone level."
-#| tbl-cap: "Fishery performance statistics."
-#| eval: true
-#| output: true
-```
-
-Black-Scholes (@eq-black-scholes) is a mathematical model:
-
-$$
-\frac{\partial \mathrm C}{ \partial \mathrm t } + \frac{1}{2}\sigma^{2} \mathrm S^{2}
-\frac{\partial^{2} \mathrm C}{\partial \mathrm C^2}
-  + \mathrm r \mathrm S \frac{\partial \mathrm C}{\partial \mathrm S}\ =
-  \mathrm r \mathrm C 
-$$ {#eq-black-scholes}
-
-## Introduction {#sec-introduction}
-
-See @sec-introduction 
-
----
-# citations: https://quarto.org/docs/authoring/citations.html; https://pandoc.org/MANUAL.html#citations
-
-Blah Blah [see @knuth1984, pp. 33-35; also @wickham2015, chap. 1]
-
-	Blah Blah (see Knuth 1984, 33–35; also Wickham 2015, chap. 1)
-
-Blah Blah [@knuth1984, pp. 33-35, 38-39 and passim]
-
-	Blah Blah (Knuth 1984, 33–35, 38–39 and passim)
-
-Blah Blah [@wickham2015; @knuth1984].
-
-	Blah Blah (Wickham 2015; Knuth 1984).
-
-Wickham says blah [-@wickham2015]
-
-	Wickham says blah (2015)
-
-@knuth1984 says blah.
-
-	Knuth (1984) says blah.
-
-@knuth1984 [p. 33] says blah.
-
-	Knuth (1984, 33) says blah.
-
-#CSL: default is  Chicago Manual of Style author-date format
-
-https://github.com/citation-style-language/styles
-https://www.zotero.org/styles
-
-### References
-
-::: {#refs}
-:::
-
-```
-
+ 
 -->
 
 
@@ -204,47 +56,46 @@ First set up environment. Data comes from:
 - Dockside monitoring (Marfis)
 - Snow crab survey 
 
-These are mostly imported and formatted in [01_snowcrab](https://github.com/jae0/bio.snowcrab/inst/scripts/01_snowcrab.R). The methods are mostly outlined in @Choi_et_al_2005b.
+These are mostly imported and formatted in [01_snowcrab.R](01_snowcrab.R)
 
 
 ```{r}
-#| label: setup
 #| eval: true
 #| output: false
+    require(aegis)
+    
+    # Get data and format based upon parameters:
+    year.assessment = 2023
+    p = bio.snowcrab::load.environment( year.assessment=year.assessment )
+    
+    # loadfunctions( "aegis")
+    # loadfunctions( "bio.snowcrab")  # in case of local edits
 
-  require(aegis)
+    # require(ggplot2)
+    # require(data.table)
+ 
+    require(gt)  # table formatting
+ 
+    outtabledir = file.path( p$annual.results, "tables" )
+    
+    years = as.character(1996: year.assessment)
+
+    regions = c("cfanorth", "cfasouth", "cfa4x")
+    nregions = length(regions)
   
-  # Get data and format based upon parameters:
-  year.assessment = 2023
-  p = bio.snowcrab::load.environment( year.assessment=year.assessment )
-  
-  # loadfunctions( "aegis")
-  # loadfunctions( "bio.snowcrab")  # in case of local edits
+    FD = fishery_data()  # mass in tonnes
+    fda = FD$summary_annual
+    dt = as.data.frame( fda[ which(fda$yr %in% c(year.assessment - c(0:10))),] )
+    dt =  dt[,c("region", "yr", "Licenses", "TAC", "landings", "effort", "cpue")] 
+    names(dt) = c("Region", "Year", "Licenses", "TAC", "Landings", "Effort", "CPUE") 
+    rownames(dt) = NULL
+    odb0 = setDT(observer.db("odb"))
+    odb0$region = NA
+    for ( reg in regions) {
+      r = polygon_inside(x = odb0, region = aegis.polygons::polygon_internal_code(reg), planar=FALSE)
+      odb0$region[r] = reg
+    }
 
-  # require(ggplot2)
-  # require(data.table)
-
-  require(gt)  # table formatting
-
-  outtabledir = file.path( p$annual.results, "tables" )
-  
-  years = as.character(1996: year.assessment)
-
-  regions = c("cfanorth", "cfasouth", "cfa4x")
-  nregions = length(regions)
-
-  FD = fishery_data()  # mass in tonnes
-  fda = FD$summary_annual
-  dt = as.data.frame( fda[ which(fda$yr %in% c(year.assessment - c(0:10))),] )
-  dt =  dt[,c("region", "yr", "Licenses", "TAC", "landings", "effort", "cpue")] 
-  names(dt) = c("Region", "Year", "Licenses", "TAC", "Landings", "Effort", "CPUE") 
-  rownames(dt) = NULL
-  odb0 = setDT(observer.db("odb"))
-  odb0$region = NA
-  for ( reg in regions) {
-    r = polygon_inside(x = odb0, region = aegis.polygons::polygon_internal_code(reg), planar=FALSE)
-    odb0$region[r] = reg
-  }
 
 ```
 
@@ -254,10 +105,10 @@ These are mostly imported and formatted in [01_snowcrab](https://github.com/jae0
 NENS:
 
 ```{r}
-#| label: table-fishery-nens-perf
-#| tbl-cap: "Fishery performance statistics in NENS. Units are: TACs and Landings (tons, t), Effort ($\\times 10^3$ trap hauls, th) and CPUE (kg/th)."
 #| eval: true
 #| output: true
+#| label: table-fishery-nens-perf
+#| tbl-cap: "Fishery performance statistics in NENS. Units are: TACs and Landings (tons, t), Effort ($\\times 10^3$ trap hauls, th) and CPUE (kg/th)."
 
 ii = which(dt$Region=="cfanorth")
 oo = dt[ii, c("Year", "Licenses", "TAC", "Landings", "Effort", "CPUE")] 
@@ -271,11 +122,10 @@ gt::gt(oo) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1)
 SENS:
 
 ```{r}
-#| label: table-fishery-sens-perf
-#| tbl-cap: "Fishery performance statistics in SENS. Units are: TACs and Landings (tons, t), Effort ($\\times 10^3$ trap hauls, th) and CPUE (kg/th)."
 #| eval: true
 #| output: true
-
+#| label: table-fishery-sens-perf
+#| tbl-cap: "Fishery performance statistics in SENS. Units are: TACs and Landings (tons, t), Effort ($\\times 10^3$ trap hauls, th) and CPUE (kg/th)."
 ii = which(dt$Region=="cfasouth")
 oo = dt[ii, c("Year", "Licenses", "TAC", "Landings", "Effort", "CPUE")] 
 gt::gt(oo) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1), 
@@ -287,11 +137,10 @@ gt::gt(oo) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1)
 4X:
 
 ```{r}
-#| label: table-fishery-4x-perf
-#| tbl-cap: "Fishery performance statistics in 4X. Units are: TACs and Landings (tons, t), Effort ($\\times 10^3$ trap hauls, th) and CPUE (kg/th). There were no landings or TACs in 2018/2019 due to indications of low abundance. The 2022 season is ongoing."
 #| eval: true
 #| output: true
-
+#| label: table-fishery-4x-perf
+#| tbl-cap: "Fishery performance statistics in 4X. Units are: TACs and Landings (tons, t), Effort ($\\times 10^3$ trap hauls, th) and CPUE (kg/th). There were no landings or TACs in 2018/2019 due to indications of low abundance. The 2022 season is ongoing."
 ii = which(dt$Region=="cfa4x")
 oo = dt[ii, c("Year", "Licenses", "TAC", "Landings", "Effort", "CPUE")] 
 gt::gt(oo) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1), 
@@ -305,7 +154,6 @@ gt::gt(oo) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1)
 ### Carapace condition from observed data < 95mm CW
 
 ```{r}
-#| label: setup-observer-data
 #| eval: true
 #| output: false
   odb = odb0[ cw < 95 & prodcd_id==0 & shell %in% c(1:5) & region %in% regions & sex==0, ]  # male
@@ -314,11 +162,10 @@ gt::gt(oo) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1)
 NENS:
 
 ```{r}
-#| label: table-fishery-nens-sublegal
-#| tbl-cap: "Fishery performance statistics in NENS. Distribution of at sea observations of males less than 95 mm CW by year and shell condition."
 #| eval: true
 #| output: true
-
+#| label: table-fishery-nens-sublegal
+#| tbl-cap: "Fishery performance statistics in NENS. Distribution of at sea observations of males less than 95 mm CW by year and shell condition."
 resN = dcast( odb0[ region=="cfanorth", .(N=.N), by=.(fishyr, shell) ], fishyr  ~ shell, value.var="N", fill=0, drop=FALSE, na.rm=TRUE )
 if ( "NA" %in% names(resN) ) resN$"NA" = NULL
 names(resN) = c("Year", "CC1", "CC2", "CC3", "CC4", "CC5" )
@@ -683,9 +530,7 @@ gt::gt(out) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1
   row_group.padding = gt::px(1))
 ```
 
-
-## References
-
+  
  
 <!--
 
