make 01.snowcrab.r a link to markdown

--- a/inst/markdown/02.tables.md
+++ b/inst/markdown/02.tables.md
@@ -44,11 +44,8 @@ format:
     pdf-engine: lualatex
   powerpoint:
   revealjs:
-
 ---
 
-
-   
 <!-- Preamble
  
  
@@ -68,7 +65,7 @@ https://quarto.org/docs/output-formats/all-formats.html
 
 -->
 
-
+````{=html}
 <!-- NOTES: Make sure to have pulled observer data:
 
     year.assessment = 2023
@@ -86,10 +83,10 @@ The reserved prefixes are: fig, tbl, lst, tip, nte, wrn, imp, cau, thm, lem, cor
 avoid using underscores (_) in labels and IDs as this can cause problems when rendering to PDF with LaTeX.
 
 ![Elephant](elephant.png){#fig-elephant}
-Default 	@fig-elephant 	Figure 1
-Capitalized 	@Fig-elephant 	Figure 1
-Custom Prefix 	[Fig @fig-elephant] 	Fig 1
-No Prefix 	[-@fig-elephant] 	1
+Default     @fig-elephant   Figure 1
+Capitalized     @Fig-elephant   Figure 1
+Custom Prefix   [Fig @fig-elephant]     Fig 1
+No Prefix   [-@fig-elephant]    1
 
 ::: {#fig-elephants layout-ncol=2}
 ![Surus](surus.png){#fig-surus}
@@ -159,27 +156,27 @@ See @sec-introduction
 
 Blah Blah [see @knuth1984, pp. 33-35; also @wickham2015, chap. 1]
 
-	Blah Blah (see Knuth 1984, 33–35; also Wickham 2015, chap. 1)
+    Blah Blah (see Knuth 1984, 33–35; also Wickham 2015, chap. 1)
 
 Blah Blah [@knuth1984, pp. 33-35, 38-39 and passim]
 
-	Blah Blah (Knuth 1984, 33–35, 38–39 and passim)
+    Blah Blah (Knuth 1984, 33–35, 38–39 and passim)
 
 Blah Blah [@wickham2015; @knuth1984].
 
-	Blah Blah (Wickham 2015; Knuth 1984).
+    Blah Blah (Wickham 2015; Knuth 1984).
 
 Wickham says blah [-@wickham2015]
 
-	Wickham says blah (2015)
+    Wickham says blah (2015)
 
 @knuth1984 says blah.
 
-	Knuth (1984) says blah.
+    Knuth (1984) says blah.
 
 @knuth1984 [p. 33] says blah.
 
-	Knuth (1984, 33) says blah.
+    Knuth (1984, 33) says blah.
 
 #CSL: default is  Chicago Manual of Style author-date format
 
@@ -194,18 +191,17 @@ https://www.zotero.org/styles
 ```
 
 -->
-
+````
 
 # Set up environment
 
 First set up environment. Data comes from:
 
-- At seas observations of fishery (ISSDB)
-- Dockside monitoring (Marfis)
-- Snow crab survey 
+-   At seas observations of fishery (ISSDB)
+-   Dockside monitoring (Marfis)
+-   Snow crab survey
 
 These are mostly imported and formatted in [01_snowcrab](https://github.com/jae0/bio.snowcrab/inst/scripts/01_snowcrab.R). The methods are mostly outlined in @Choi_et_al_2005b.
-
 
 ```{r}
 #| label: setup
@@ -248,7 +244,6 @@ These are mostly imported and formatted in [01_snowcrab](https://github.com/jae0
 
 ```
 
-
 ## Fishery statistics from at sea observations
 
 NENS:
@@ -266,7 +261,6 @@ gt::gt(oo) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1)
     footnotes.padding = gt::px(1), source_notes.padding = gt::px(1), 
     row_group.padding = gt::px(1))
 ```
-
 
 SENS:
 
@@ -299,10 +293,10 @@ gt::gt(oo) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1)
     footnotes.padding = gt::px(1), source_notes.padding = gt::px(1), 
     row_group.padding = gt::px(1))
 ```
- 
+
 ## At sea observed data
 
-### Carapace condition from observed data < 95mm CW
+### Carapace condition from observed data \< 95mm CW
 
 ```{r}
 #| label: setup-observer-data
@@ -366,8 +360,7 @@ gt::gt(resX) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(
     row_group.padding = gt::px(1))
 ```
 
-
-### Carapace condition from observed data  >= 95mm CW
+### Carapace condition from observed data \>= 95mm CW
 
 ```{r}
 #| eval: true
@@ -426,15 +419,12 @@ gt::gt(resX) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(
     row_group.padding = gt::px(1))
 ```
 
-   
-   
-###  Percent soft from observed data
+### Percent soft from observed data
 
-There are two possible definitions: 
+There are two possible definitions:
 
-- durometer < 68 (Soft, Total)
-- carapace conditions 1 and 2 (SoftSC, TotalSC)
-
+-   durometer \< 68 (Soft, Total)
+-   carapace conditions 1 and 2 (SoftSC, TotalSC)
 
 ```{r}
 #| eval: true
@@ -503,10 +493,6 @@ gt::gt(resX) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(
     row_group.padding = gt::px(1))
 ```
 
-   
-    
-  
-
 <!--
 # instars of interest: 11 and 12
 
@@ -516,8 +502,6 @@ growth.11.to.12 =  predict.mass.g.from.CW.mm( mean(CW.interval.male(12)) ) - pre
 # = 419 g
 #  12to13 = ~450
 -->
-
-
 
 ### Compare discard rates Maritimes:
 
@@ -584,10 +568,9 @@ gt::gt(resX) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(
   row_group.padding = gt::px(1))
 ```
 
-
 ## Survey-based tables
 
-###  Carapace condition from trawl data  >= 95mm CW  
+### Carapace condition from trawl data \>= 95mm CW
 
 ```{r}
 #| eval: true
@@ -656,7 +639,6 @@ gt::gt(resX) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(
   row_group.padding = gt::px(1))
 ```
 
-
 ### Counts of stations in each area
 
 ```{r}
@@ -683,10 +665,8 @@ gt::gt(out) |> gt::tab_options(table.font.size = 12, data_row.padding = gt::px(1
   row_group.padding = gt::px(1))
 ```
 
-
 ## References
 
- 
 <!--
 
 deprecated = TRUE
