--- a/inst/markdown/01.snowcrab.md
+++ b/inst/markdown/01.snowcrab.md
@@ -2,7 +2,10 @@
 
 This is a markdown document. It can be viewed in formatted form via:
   
-  - a web browser (you might need to install a browser add-in), or 
+  - a web browser open: [https://github.com/jae0/bio.snowcrab/inst/markdown/01.snowcrab.md](01.snowcrab.md)   
+
+  - a web browser open: [../markdown/01.snowcrab.md](01.snowcrab.md) (you might need to install a browser add-in), or 
+  
   - a text editor with markdown awareness (e.g. Rstudio, VSCode, etc. ).
 
 
