--- a/inst/markdown/01.snowcrab.md
+++ b/inst/markdown/01.snowcrab.md
@@ -2,9 +2,9 @@
 
 This is a markdown document. It can be viewed in formatted form via:
   
-  - a web browser open: [https://github.com/jae0/bio.snowcrab/inst/markdown/01.snowcrab.md](01.snowcrab.md)   
+  - a web browser open the webpage: [https://github.com/jae0/bio.snowcrab/inst/markdown/01.snowcrab.md](01.snowcrab.md)   
 
-  - a web browser open: [../markdown/01.snowcrab.md](01.snowcrab.md) (you might need to install a browser add-in), or 
+  - a web browser open the file directly: [../markdown/01.snowcrab.md](01.snowcrab.md) (you might need to install a browser add-in), or 
   
   - a text editor with markdown awareness (e.g. Rstudio, VSCode, etc. ).
 
@@ -33,18 +33,18 @@ Prepare the data environment.
 First, ensure data have been added to the back-end storage relational databases (ISSDB). Currently this is loaded manually by Brent Cameron. 
 
 
-{Brent, please add a shorrt description here, when you can}
+{Brent, please add a short description here, with links to your work, when you can}
 
 
 After load, we download the whole data system locally to manipulate and error check. There are several ways to proceed. 
 
-  - Run in an R-session in Linux: This is challenging as ROracle does not compile easily. 
+  - Run in an R-session in **Linux**: This is challenging as ROracle does not compile easily. 
 
-  - Run in an R-session in MSWindows without minimal dependencies (DBI, ROracle). See:  
+  - Run in an R-session in **MSWindows** with minimal dependencies (DBI, ROracle). See:  
   
-    - [bio.snowcrab/inst/scripts/01_polygons.md](99_data_extraction_jae.R)  
+    - [bio.snowcrab/inst/scripts/99_data_extrqaction_jae.R](99_data_extraction_jae.R)  
 
-  - Run in an R-session in MSWindows: This requires you have bio.snowcrab and supporting libraries installed. Just run the following:
+  - Run in an R-session in **MSWindows**: This requires you have bio.snowcrab and supporting libraries installed. Just run the following:
 
 ```r  
 
@@ -104,13 +104,13 @@ This initial set-level information is required to sanity check net mensuration e
 
 ```r
 
-    snowcrab.db( DS="setInitial.redo", p=p ) # this is required by the seabird.db (but not minilog and netmind)
+  snowcrab.db( DS="setInitial.redo", p=p ) # this is required by the seabird.db (but not minilog and netmind)
 
-    # few sanity checks on the setInitial data pulled from the raw tables
-    problems = data.quality.check( type="stations", p=p)  # duplicates
-    problems = data.quality.check( type="count.stations", p=p)
-    problems = data.quality.check( type="position", p=p) #MG try checking the end position of the tow, if there is an error
-    problems = data.quality.check( type="position.difference", p=p)
+  # few sanity checks on the setInitial data pulled from the raw tables
+  problems = data.quality.check( type="stations", p=p)  # duplicates
+  problems = data.quality.check( type="count.stations", p=p)
+  problems = data.quality.check( type="position", p=p) #MG try checking the end position of the tow, if there is an error
+  problems = data.quality.check( type="position.difference", p=p)
 
 ```
 
