--- a/inst/markdown/01.snowcrab.md
+++ b/inst/markdown/01.snowcrab.md
@@ -2,9 +2,9 @@
 
 This is a markdown document. It can be viewed in formatted form via:
   
-  - a web browser open the webpage: [https://github.com/jae0/bio.snowcrab/inst/markdown/01.snowcrab.md](01.snowcrab.md)   
+  - a web browser open the webpage: [01.snowcrab.md](https://github.com/jae0/bio.snowcrab/inst/markdown/01.snowcrab.md)   
 
-  - a web browser open the file directly: [../markdown/01.snowcrab.md](01.snowcrab.md) (you might need to install a browser add-in), or 
+  - a web browser open the local file directly: [01.snowcrab.md](../markdown/01.snowcrab.md) (you might need to install a browser add-in), or 
   
   - a text editor with markdown awareness (e.g. Rstudio, VSCode, etc. ).
 
@@ -42,7 +42,7 @@ After load, we download the whole data system locally to manipulate and error ch
 
   - Run in an R-session in **MSWindows** with minimal dependencies (DBI, ROracle). See:  
   
-    - [bio.snowcrab/inst/scripts/99_data_extrqaction_jae.R](99_data_extraction_jae.R)  
+    - [99_data_extraction_jae.R](https://github.com/jae0/bio.snowcrab/tree/master/inst/scripts/99_data_extraction_jae.R)  
 
   - Run in an R-session in **MSWindows**: This requires you have bio.snowcrab and supporting libraries installed. Just run the following:
 
@@ -219,18 +219,18 @@ Local empirical lookup tables are required for the steps that follow. Most do no
 If this your first time using this system, you will need to see if the polygons defined are good enough for your use. If you need/want to (re)-initialize polygons,
 they can be found in:
   
-  - [aegis.polygons/inst/scripts/01_polygons.md](../../../aegis.polygons/inst/scripts/01_polygons.md)  
+  - [aegis.polygons/inst/scripts/01_polygons.md](https://github.com/jae0/aegis.polygons/tree/master/inst/scripts/01_polygons.md)  
   
-  - [aegis.coastline/inst/scripts/01_coastline.md](../../../aegis.coastline/inst/scripts/01_coastline.md)  
+  - [aegis.coastline/inst/scripts/01_coastline.md](https://github.com/jae0/aegis.coastline/tree/master/inst/scripts/01_coastline.md)  
 
 NOTE: If you over-write them, then you will need to make sure that all the other polygon-based methods are consistent. Beware.
 
 
 #### Bathymetry
 
-The model solutions for bathymetry comes from **stmv** smoothed solutions. There is no need to re-run the **carstm** solutions unless you want to replace the lookup system with them. The empirical lookup of aggregated data however is useful and should be updated reasonably frequently. Every ~3-5 years? See the bathymetry project for more details:
+The model solutions for bathymetry comes from [**stmv**](https://github.com/jae0/stmv) smoothed solutions. There is no need to re-run the **carstm** solutions unless you want to replace the lookup system with them. The empirical lookup of aggregated data however is useful and should be updated reasonably frequently. Every ~3-5 years? See the bathymetry project for more details:
 
-  - aegis.bathymetry/inst/scripts/01_bathymetry.r
+  - [aegis.bathymetry/inst/scripts/01_bathymetry_data.r](https://github.com/jae0/aegis.bathymetry/tree/master/inst/scripts//01_bathymetry_data.R)
 
 ```r
 
@@ -246,7 +246,7 @@ The model solutions for bathymetry comes from **stmv** smoothed solutions. There
 
 The model solutions for substrate grain size comes from **stmv** smoothed solutions. There is no need to re-run the **carstm** solutions unless you want to replace the lookup system with them. The empirical lookup of aggregated data however is useful and should be updated reasonably frequently. Every ~3-5 years?  See the substrate project for more details:
 
-  - [aegis.substrate/inst/scripts/01_substrate_data.R](../../../aegis.substrate/inst/scripts/01_substrate_data.R)
+  - [aegis.substrate/inst/scripts/01_substrate_data.R](https://github.com/jae0/aegis.substrate/tree/master/inst/scripts/01_substrate_data.R)
 
 
 ```r
@@ -265,13 +265,12 @@ Base data comes from many sources. Historical data was assimilated by OSD and co
 
 After loading, we download annual time slices here for processing. See for more details:
 
-  - [aegis.temperature/inst/scripts/01_temperature_data.md](../../../aegis.temperature/inst/scripts/01_temperature_data.md)
+  - [aegis.temperature/inst/scripts/01_temperature_data.md](https://github.com/jae0/aegis.temperature/tree/master/inst/scripts/01_temperature_data.md)
 
 
 The following is only for data assimilation. Modelling requires step 3. Bottom temperature modelling should however be re-run annually after assimilating new year's data. Currently, we use:
   
-  - [aegis.temperature/inst/scripts/03_temperature_carstm.md](../../../aegis.temperature/inst/scripts/03_temperature_carstm.md).
-
+  - [aegis.temperature/inst/scripts/03_temperature_carstm.md](https://github.com/jae0/aegis.temperature/tree/master/inst/scripts/03_temperature_carstm.md)
 
 ```r  
       pT = temperature_parameters( p=parameters_reset(pC), project_class="carstm"  )
@@ -288,14 +287,14 @@ The following is only for data assimilation. Modelling requires step 3. Bottom t
 
 Namely groundfish surveys provide supplemental data for species composition analysis:
 
-  - [aegis.survey/inst/scripts/01_survey_data.md](../../../aegis.survey/inst/scripts/01_survey_data.md).
+  - [aegis.survey/inst/scripts/01_survey_data.md](https://github.com/jae0/aegis.survey/tree/master/inst/scripts/01_survey_data.md).
 
 
 #### Species composition 
 
 Species composition is a covariate in the areal model for snow crab. To obtain a predictive surface, the following needs to be run: 
 
-  - [aegis.speciescomposition/inst/scripts/01_speciescomposition_carstm.R](../../../aegis.speciescomposition/inst/scripts/01_speciescomposition_carstm.R).
+  - [aegis.speciescomposition/inst/scripts/01_speciescomposition_carstm.R](https://github.com/jae0/aegis.speciescomposition/tree/master/inst/scripts/01_speciescomposition_carstm.R).
 
 
 
