--- a/inst/markdown/01.snowcrab.md
+++ b/inst/markdown/01.snowcrab.md
@@ -39,9 +39,9 @@ First, ensure data have been added to the back-end storage relational databases 
 
 After load, we download the whole data system locally to manipulate and error check. There are several ways to proceed. 
 
-  - Run in an R-session in **Linux**: This is challenging as ROracle does not compile easily. 
+  - Run in an R-session in **Linux** (on the server): This is challenging as ROracle does not compile easily. 
 
-  - Run in an R-session in **MSWindows** with minimal dependencies (DBI, ROracle). See:  
+  - Run in an R-session in **MSWindows** with minimal dependencies (DBI, ROracle) to get all \*.rawdata.redo files below in one pass (after which you can skip the \*.rawdata.redo steps below). See:  
   
     - [99_data_extraction_jae.R](https://github.com/jae0/bio.snowcrab/tree/master/inst/scripts/99_data_extraction_jae.R)  
 
@@ -50,8 +50,8 @@ After load, we download the whole data system locally to manipulate and error ch
 ```r  
 
   # choose appropriate years
-  yrs = 1996:year.assessment # redo all years
   yrs = p$year.assessment  # redo just last year
+  # yrs = 1996:year.assessment # redo all years
 
   snowcrab.db( DS="set.rawdata.redo", yrs=yrs ) # set data 
   snowcrab.db( DS="det.rawdata.redo", yrs=yrs ) # determined data (individual sex, size, mat, etc)
@@ -134,40 +134,36 @@ Ideally, "click/touch" (manual touchdown / lift off) has already been completed 
 Any stations without touchdown / liftoff will prompt for manual input when running code below:
 
 
-{Brent, add links to your system here and a short description}.
+{Brent, please add links to your system here and a short description}.
 
+If updating a single year or a subset of years, specify the appropriate years here:
 
 ```r
-  # TODO:: this section needs to be moved to a static database system with incremental additions each year 
+  yrs_to_load = p$year.assessment
+  # yrs_load = 2020:2024   # for example
 
-  if (updating.year.assessment) {
-  # if just updating a single year, run the following, else all years will be run by default
-    p$seabird.yToload = p$year.assessment
-    p$minilog.yToload = p$year.assessment
-    p$netmind.yToload = p$year.assessment
-    p$esonar.yToload  = p$year.assessment
-  }
+  p$seabird.yToload = yrs_to_load
+  p$minilog.yToload = yrs_to_load
+  p$netmind.yToload = yrs_to_load
+  p$esonar.yToload  = yrs_to_load
 
-  # Only do this line at the beginning to create the netmind format. Set 
-  # redo.marp... to TRUE to convert the SDS csv file to a usable table 
-  # which takes a long time. Only do once!!
+  # Only do this line at the beginning to create the netmind format. (obsolete) 
   # convert.marport.sds_csv2netmind(yr=yrs, redo.marport_conversion = FALSE )
     
   seabird.db( DS="load", Y=p$seabird.yToload ) # this begins 2012;duplicates are often due to seabird files not being restarted each morning
-
   minilog.db( DS="load", Y=p$minilog.yToload ) # minilog data series "begins" in 1999 -- 60 min?
 
-  #netmind.db( DS='esonar2netmind.conversion',Y=p$esonar.yToload ) #may no longer need to be run BZ
+  # netmind.db( DS='esonar2netmind.conversion',Y=p$esonar.yToload ) # (obsolete)
   netmind.db( DS="load", Y=p$netmind.yToload) # netmind data series "begins" in 1998 -- 60 min?
-  #JC note: 1998:2002 have about 60 files with no data, just a short header
+  # JC note: 1998:2002 have about 60 files with no data, just a short header
   
+  # add troublesome id's to the list here .. eventually move into their respective functions
   p$netmensuration.problems = c() 
-  # add troublesome id's to the list above .. eventually move into their respective functions
 
+  # now compute statistics (means, sd, etc)
   seabird.db (DS="stats.redo", Y=p$seabird.yToload )
   minilog.db (DS="stats.redo", Y=p$minilog.yToload )  # note no depth in minilog any more (since 2014 ..  useful for temperature only)
   netmind.db (DS="stats.redo", Y=p$netmind.yToload )
-
 
 ```
 
