--- a/inst/markdown/archive/03.biomass_index_carstm.md
+++ b/inst/markdown/archive/03.biomass_index_carstm.md
@@ -179,9 +179,11 @@ Each variable is modelled with the same covariates.
     # EXAMINE POSTERIORS AND PRIORS
     res = carstm_model(  p=pN, DS="carstm_summary" )  # parameters in p and summary
 
+    outputdir = file.path(pN$modeldir, pN$carstm_model_label)
+
     res_vars = c( names( res$hypers), names(res$fixed) )
     for (i in 1:length(res_vars) ) {
-      o = carstm_prior_posterior_compare( res, vn=res_vars[i] )  
+      o = carstm_prior_posterior_compare( res, vn=res_vars[i], outputdir=outputdir )  
       dev.new(); print(o)
     }     
 
@@ -209,9 +211,11 @@ Each variable is modelled with the same covariates.
     # EXAMINE POSTERIORS AND PRIORS
     res = carstm_model(  p=pW, DS="carstm_summary" )  # parameters in p and summary
 
+    outputdir = file.path(pW$modeldir, pW$carstm_model_label)
+
     res_vars = c( names( res$hypers), names(res$fixed) )
     for (i in 1:length(res_vars) ) {
-      o = carstm_prior_posterior_compare( res, vn=res_vars[i] )  
+      o = carstm_prior_posterior_compare( res, vn=res_vars[i], outputdir=outputdir  )  
       dev.new(); print(o)
     }     
 
@@ -239,9 +243,11 @@ Each variable is modelled with the same covariates.
     # EXAMINE POSTERIORS AND PRIORS
     res = carstm_model(  p=pH, DS="carstm_summary" )  # parameters in p and summary
 
+    outputdir = file.path(pH$modeldir, pH$carstm_model_label)
+
     res_vars = c( names( res$hypers), names(res$fixed) )
     for (i in 1:length(res_vars) ) {
-      o = carstm_prior_posterior_compare( res, vn=res_vars[i] )  
+      o = carstm_prior_posterior_compare( res, vn=res_vars[i], outputdir=outputdir  )  
       dev.new(); print(o)
     }     
 
