clean up and speed up fishery stats and plots

--- a/inst/markdown/archive/02.tables.md
+++ b/inst/markdown/archive/02.tables.md
@@ -577,17 +577,20 @@ if (deprecated) {
   print.xtable(Fx, type="latex", file="4x_FisherySummary.tex")
   print.xtable(Fx, type="html", file="4x_FisherySummary.html")
 
-  #regions = c("cfaall")
-  #regions = c("cfanorth", "cfasouth", "cfa4x")
-  regions = c("cfanorth", "cfa23", "cfa24", "cfa4x")
+  l = NULL  
+
+  # regions = list( region=c("cfanorth", "cfasouth", "cfa4x"))
+  regions = list(subarea=c("cfanorth", "cfa23", "cfa24", "cfa4x"))
+  res = logbook.db( DS="aggregated", region=regions )
+  
   l = NULL
-  for (r in regions) {
-    res = get.fishery.stats.by.region( Reg=r) #need to add the TACs per year and number of licences
+  for (r in unlist(regions)) {
     #round the landings to ton
     #round CPUE to no decimal places
     #round the effort to per x1000 trap hauls
     print(r)
-    print(res)
+    vn = names(regions)
+    print(res[res[[vn]]==r, ])
   }
 
 
